--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -28,6 +28,7 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-gallery": "^5.10.0",
     "rxjs": "~6.5.3",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
