--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.12",
     "@angular/router": "~8.2.12",
     "@auth0/angular-jwt": "^3.0.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "alertifyjs": "^1.12.0",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
